--- a/templates/index.html
+++ b/templates/index.html
@@ -14,8 +14,14 @@
     <h1 align="center">This is backend develop with JSON</h1>
     <div class="jumbotron-fluid" align="center">
       <h1 class="display-4">Example Link API GET data from JSON</h1>
-      <div>Example 1 : <label><a href="http://localhost:8080/ModelType/">http://localhost:8080/ModelType/</a></label> then we got.</div>
-      <div class="bg-dark text-light">{ "lmYjE":["RrtS6", "Do5Au", "O6z4N", "LLTCQ", "lEtbK", "dTHyt", "MvG9C", "9mliy"] }</div>
+      <div>Example 1 : <label><a href="http://localhost:8080/Model/">http://localhost:8080/Model/</a></label> then we got.</div>
+      <div class="bg-dark text-light">{"lmYjE":"Moblie"}</div>
+      <div>Example 2 : <label><a href="http://localhost:8080/Model/lmYjE">http://localhost:8080/Model/lmYjE</a></label> then we got.</div>
+      <div class="bg-dark text-light">["RrtS6", "Do5Au", "O6z4N", "LLTCQ", "lEtbK", "dTHyt", "MvG9C", "9mliy"]</div>
+      <div>Example 3 : <label><a href="http://localhost:8080/Model/lmYjE/Value/">http://localhost:8080/Model/lmYjE/Value/</a></label> then we got.</div>
+      <div class="bg-dark text-light">"Moblie"</div>
+      <div>Example 4 : <label><a href="http://localhost:8080/Model/lmYjE/RrtS6">http://localhost:8080/Model/lmYjE/RrtS6</a></label> then we got.</div>
+      <div class="bg-dark text-light">"Apple"</div>
     </div>
     <div class="jumbotron-fluid" align="center">
       <div><a href="/HostestOrder/">HOTEST ORDER DATA</a></div>
@@ -26,9 +32,7 @@
       <div><a href="/PhoneNumber/">PHONE NUMBER DATA</a></div>
       <div><a href="/Social/">SOCIAL DATA</a></div>
       <div><a href="/Payment/">PAYMENT DATA</a></div>
-      <div><a href="/ModelGroup/">MODEL DATA</a></div>
-      <div><a href="/ModelType/">MDOELTYPE DATA</a></div>
-      <div><a href="/ModelName/">MODELNAME DATA</a></div>
+      <div><a href="/Model/">MODEL DATA</a></div>
     </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
